@@ -680,12 +680,7 @@ static VALUE get_content(VALUE self)
   return Qnil;
 }
 
-/*
- * call-seq:
- *  add_child(node)
- *
- * Add +node+ as a child of this node. Returns the new child node.
- */
+/* :nodoc: */
 static VALUE add_child(VALUE self, VALUE child)
 {
   return reparent_node_with(child, self, xmlAddChild);
@@ -755,23 +750,13 @@ static VALUE path(VALUE self)
   return rval ;
 }
 
-/*
- *  call-seq:
- *    add_next_sibling(node)
- *
- *  Insert +node+ after this node (as a sibling).
- */
+/* :nodoc: */
 static VALUE add_next_sibling(VALUE self, VALUE rb_node)
 {
   return reparent_node_with(rb_node, self, xmlAddNextSibling) ;
 }
 
-/*
- * call-seq:
- *  add_previous_sibling(node)
- *
- * Insert +node+ before this node (as a sibling).
- */
+/* :nodoc: */
 static VALUE add_previous_sibling(VALUE self, VALUE rb_node)
 {
   return reparent_node_with(rb_node, self, xmlAddPrevSibling) ;
@@ -1030,7 +1015,6 @@ void init_xml_node()
   rb_define_method(klass, "node_name", get_name, 0);
   rb_define_method(klass, "document", document, 0);
   rb_define_method(klass, "node_name=", set_name, 1);
-  rb_define_method(klass, "add_child", add_child, 1);
   rb_define_method(klass, "parent", get_parent, 0);
   rb_define_method(klass, "child", child, 0);
   rb_define_method(klass, "children", children, 0);
@@ -1049,8 +1033,6 @@ void init_xml_node()
   rb_define_method(klass, "attribute_with_ns", attribute_with_ns, 2);
   rb_define_method(klass, "namespace", namespace, 0);
   rb_define_method(klass, "namespace_definitions", namespace_definitions, 0);
-  rb_define_method(klass, "add_previous_sibling", add_previous_sibling, 1);
-  rb_define_method(klass, "add_next_sibling", add_next_sibling, 1);
   rb_define_method(klass, "encode_special_chars", encode_special_chars, 1);
   rb_define_method(klass, "dup", duplicate_node, -1);
   rb_define_method(klass, "unlink", unlink_node, 0);
@@ -1061,14 +1043,17 @@ void init_xml_node()
   rb_define_method(klass, "pointer_id", pointer_id, 0);
   rb_define_method(klass, "line", line, 0);
 
+  rb_define_private_method(klass, "add_child_node", add_child, 1);
+  rb_define_private_method(klass, "add_previous_sibling_node", add_previous_sibling, 1);
+  rb_define_private_method(klass, "add_next_sibling_node", add_next_sibling, 1);
+  rb_define_private_method(klass, "replace_node", replace, 1);
   rb_define_private_method(klass, "dump_html", dump_html, 0);
   rb_define_private_method(klass, "native_write_to", native_write_to, 4);
-  rb_define_private_method(klass, "replace_with_node", replace, 1);
   rb_define_private_method(klass, "native_content=", set_content, 1);
   rb_define_private_method(klass, "get", get, 1);
   rb_define_private_method(klass, "set_namespace", set_namespace, 1);
   rb_define_private_method(klass, "compare", compare, 1);
 
-  decorate = rb_intern("decorate");
+  decorate      = rb_intern("decorate");
   decorate_bang = rb_intern("decorate!");
 }
